# concurrent_file_search

./: .gitignore  CMakeLists.txt  README.md
data/: file1.txt  lol.txt  test.txt
data/DirA/DirAB/: newtest.txt
data/heh/: asdas.txt
data/kek/: newFIle.txt
data/subfolder1/: file2.txt
src/: blockingArray.h  commandParser.h  declarations.h  main.c  threads.h
src/helpers/: baHelpers.c  declarations.h  generalHelpers.h  helpers.h  potpisi.h  threadHelpers.h  treeHelpers.h
